# basecamp-Weather

./: .gitignore  CMakeLists.txt  CODEOWNERS  README.md  build.sh
src/headers/: application.hpp  client.hpp  network.hpp
src/sources/: application.cpp  client.cpp  main.cpp  network.cpp
